<resources>
    <string name="app_name">VenteImmo</string>
    <string name="bien_immobilier_au_hasard">Bien immobilier au hasard</string>
    <string name="deposer_un_bien">Déposer un bien</string>
    <string name="lister_les_annonces">Lister les annonces</string>
    <string name="chargement">Chargement...</string>
    <string name="liste_des_annonces">Liste des annonces</string>
    <string name="menu">Menu</string>
    <string name="logo">Logo</string>
    <string name="save">Enrégistrer</string>
    <string name="favorite_annonces">Annonces sauvegardées</string>
    <string name="pas_de_données">Aucune annonce sauvegardée</string>
    <string name="lister_les_annonces_favorites">Annonces sauvegardées</string>
    <string name="title_activity_main">Ventes immobilières</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dernieres_annonces">Dernières annonces</string>
    <string name="annonce_au_hasard">Annonce au hasard</string>
    <string name="deposer_une_annonce">Déposer une annonce</string>
    <string name="mes_annonces">Mes annonces</string>
    <string name="toutes_les_annonces">Toutes les annonces</string>
    <string name="profil">Profil</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="nbre_Piece">nombre de pièces : </string>
    <string name="Caract">caractéristiques </string>
    <string name="Code_post">Code Postal : </string>
    <string name="nom">Nom</string>
    <string name="premon">Prenom</string>
    <string name="email">email</string>
    <string name="telephon">Telephone</string>
    <string name="mon_profil">Mon profil</string>
    <string name="Titre">Titre</string>
    <string name="description">Description</string>
    <string name="Caractéristique">Caracteristiques</string>
    <string name="Prix">Prix</string>
    <string name="Code_ville">Code postal ville</string>
    <string name="Vendeur">Vendeur</string>
    <string name="informations" />
    <string name="Description">Description</string>
    <string name="nombre_de_piece">Nombre de pieces</string>
    <string name="Code_postal">Code postal</string>
    <string name="Valider">Valider</string>
    <string name="comment">veuillez saisir votre commentaire</string>
    <string name="error">remplire le champs</string>
    <string name="validation">commentaire valider</string>
</resources>
